src/rules/snapshots/pg_migration_lint__rules__pgm402__tests__create_table_without_if_not_exists_fires.snap
---
source: src/rules/pgm402.rs
expression: findings
---
- rule_id: PGM402
  severity: Minor
  message: "CREATE TABLE 'orders': add IF NOT EXISTS for idempotent migrations."
  file: migrations/003.sql
  start_line: 1
  end_line: 1
